Alles korrigiert bei Marketing & Allgemein

--- a/Allgemeines.tex
+++ b/Allgemeines.tex
@@ -1,17 +1,20 @@
 % !TEX root = diplomarbeit.tex
+Aus Gründen der besseren Lesbarkeit wird auf die gleichzeitige Verwendung männlicher und weiblicher Sprachformen verzichtet.
+Sämtliche Personenbezeichnungen gelten gleichwohl für beiderlei Geschlecht.
+
 \chapter{Einleitung}
 \renewcommand{\kapitelautor}{Autor: Markus Kaiser}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Projektidee}
-Die Idee des Projektes, ist die Entwicklung eines innovativen Logistiksystems, das sich durch die Verwendung eines Multicopters auszeichnet.
-Für den Entwicklungsprozess im Zuge der Diplomarbeit wurde der die Gastronomie als Einsatzbereich gewählt. Diese Wahl ermöglich zum Einen
-ein konkreteres Fomulieren der Ziele und zum Anderen eine einheitliche Vision innerhalb des Teams.
+Die Idee des Projektes, ist die Entwicklung einer Konzeptstudie für ein innovatives Logistiksystem, das sich durch die Verwendung eines Multicopters auszeichnet.
+Für den Entwicklungsprozess im Zuge der Diplomarbeit wurde die Gastronomie als Einsatzbereich gewählt. Diese Wahl ermöglicht zum einen
+ein konkreteres Fomulieren der Ziele und zum anderen eine einheitliche Vision innerhalb des Teams.
 
 Der innovative Aspekt des Projekts wird insofern abgedeckt, dass die Entwicklung des Systems so durchgeführt wird,
 dass es auch in anderwärtigen Bereichen der Logistik, wie beispielsweise der Lagerverwaltung eingesetzt werden kann.
 
-Das System setzt sich aus den drei Komponenten
+Das System setzt sich aus den folgenden drei Komponenten zusammen:
 
 \begin{itemize}
   \item Multicopter
@@ -19,12 +22,16 @@ Das System setzt sich aus den drei Komponenten
   \item Digitale Speisekarte
 \end{itemize}
 
-zusammen.
-
-(BILD: Systemblockbild)
+\begin{figure}[H]
+  \begin{centering}
+  \includegraphics[width = 1\textwidth]{Bilder/systemblockbild.jpg}
+  \par\end{centering}
+  \caption{Systemblockbild}
+  \label{Systemblockbild}
+\end{figure}
 
 Der Multicopter ist die zentrale Komponente des Projekts. Sie ist für den selbstständigen Transport von Objekten zuständig,
-und muss somit flugfähig, und im Stande Unfälle zu verhindern sein.
+und muss somit flugfähig, und im Stande sein Unfälle zu verhindern.
 
 Die Firmware regelt alle logischen Prozesse des Systems. Sowohl die Steuerung des Multicopters, als auch der
 Austausch von Daten fällt unter diese Kategorie.
@@ -36,41 +43,46 @@ Betriebs und wandelt Nutzereingaben in Befehle für den Muticopter um.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Ausgangssituation}
   Im den folgenden Absätzen wird beschrieben, wie die Idee von Hovering Steward, dem autonom fliegenden Kellner
-  entstanden ist, und womit sich die ersten Recherchen zu Begin des Projektes beschäftigt, beziehungsweise
+  entstanden ist, und womit sich die ersten Recherchen zu Beginn des Projektes beschäftigt, beziehungsweise
   welche Ergebnisse diese herausgebracht haben.
 
   \subsection{Ideenfindung}
   Ihren Anfang fand die Idee im Projektmanagement Unterricht. Die Teams mussten ein fiktives Projekt erfinden, um auf Basis dieses
   Projektmanagementpläne zu erstellen. Es entstand "Fluorescent Bakery", eine Bäckerei, die fluoreszierende Cupcakes verkauft.
   Der technische Teil ergab sich später, bei dem Gedanken diese Idee für die Diplomarbeit weiterzuverwenden. Der Ansatz hierfür war,
-  einen nicht menschlichen Kellner zu erschaffen, der mithilife künstlicher Intelligenz die Aufgaben einer Bedienung in einem Restaurant übernimmt.
-  Einen Kellner auf Rädern erschien zu simpel, daher wurde die Entscheidung getroffen, die 3. Dimension mit einzubeziehen und ihn fliegen zu lassen.
+  einen nicht menschlichen Kellner zu erschaffen, der selbst programmiert, die Aufgaben einer Bedienung in einem Restaurant übernimmt.
   So entstand "Hovering Steward - der autonom fliegende Kellner", ein dreidimensionales Tracking-System, welches eine Drohne in einem Raum die Aufgaben eines Kellners durchführen lässt.
-  Das Projekt erhielt später noch eine weitere Komponente, nämlich eine digitale Speisekarte, um das System in einem Restaurant vollständig zu automatisieren.
+  Das Projekt erhielt später noch eine weitere Komponente, nämlich eine digitale Speisekarte, um das System in einem Restaurant um einen weiteren Schritt zu automatisieren.
 
   \subsection{Stand der Technik}
   \subsection*{Themenrestaurants}
   \begin{itemize}
     \item \textbf{Disaster Café}
+
     Das Themenrestaurant Disaster Café in Spanien bietet Gästen die Erfahrung, ihr Essen bei einem Erdbeben
     der Stärke 7.8 zu sich zu nehmen.
 
     \item \textbf{Das stille Örtchen - Modern Toilet}
+
     Eingerichtet wie eine Toilette, können Gäste des Modern Toilet in Japan ihre Speisen in einem gewohnten Umfeld genießen.
 
     \item \textbf{Affen-Kellner}
+
     Die kleine Taverne in Japan besitzt zwei kleine Affen, die Tätigkeiten wie das Servieren von Getränken oder Handtüchern
     für den Inhaber übernehmen. Sie verstehen sogar, welche Getränke ein Gast bestellt.
 
     \item \textbf{The Royal Dragon}
+
     Neben Rollschuh fahrenden Kellnern verfügt das weltweit größte Restaurant für Meeresfrüchte eine
     Art Seilbahn, mithilfe welcher ein Kellner "fliegend" das Essen serviert.
 
     \item \textbf{Dinner in the Sky}
-    Bei Dinner in the Sky werden dee Gäste samt Tisch und kleiner Küche von einem Kran 50 Meter
+
+    Bei Dinner in the Sky werden die Gäste samt Tisch und kleiner Küche von einem Kran 50 Meter
     in die Luft gezogen, wo dann gespeist wird.
 
     \item \textbf{Dinner in the Dark}
+
     In diesem Themenrestaurant verbringen die Gäste ihren Aufenthalt im Dunkeln. Einzig und allein die
     Kellner können mittels Nachtsichtbrille etwas sehen.
   \end{itemize}
@@ -78,12 +90,48 @@ Betriebs und wandelt Nutzereingaben in Befehle für den Muticopter um.
   \subsection*{Multicopter in der Gastronomie}
   \begin{itemize}
       \item \textbf{Infinium-Serve}
+
       Das Unternehmen Infinium-Robotics hat ein System entwickelt, welches Gästen eines Restaurants
       das Essen mittels Hexacopter serviert.
 
       \item \textbf{iTray}
+
       iTray, ein Projekt aus London, nutzt kleine Drohnen um Sushi an die Tische der Gäste zu bringen.
       Die Drohnen werden über ein Remote-Wi-Fi-System gesteuert.
+
+  \end{itemize}
+
+  \subsection*{Multicopter Projekte}
+  \begin{itemize}
+      \item \textbf{ETH Flying Machine Arena}
+
+      Die {"Flying Machine Arena"\cite{eth}} ist ein portables System, welches einen virtuellen Raum mit den Maßen 10x10x10 Meter aufbaut, in welchem
+      Objekte mit hoher Präzision erkannt und verfolgt werden können. Das System ist für Experimente mit autonom fliegenden Hexacoptern
+      gedacht, die sich in diesem virtuellen Raum über drahtlose Kommunikation orientieren können.
+
+      \item \textbf{Lily}
+
+      {Lily\cite{lily}} ist eine selbstständig fliegende Drohne mit eingebauter Kamera. Ihr Zweck ist, dass sie den Benutzer auf seinem Weg verfolgt.
+      Sie wird dafür einfach in die Luft geworfen, worauf sie sich stabilisiert. Danach folgt sie dem Benutzer in einem festgelegten Abstand, solange dieser ein, für Lily
+      vorgesehenes Armband trägt und filmt mit einer HD Kamera alles mit.
+
+      \item \textbf{DHL Paketcopter}
+
+      Der {DHL Paketcopter\cite{dhl}} ist ein Innovationsprojekt der DHL, bei dem ein Paket per Drohne zugestellt wird. Die Drohne ist in der Lage große Strecken zu fliegen,
+      und somit auch zu schwer erreichbaren Orten zu gelangen, wenn Menschen dazu keine Möglichkeit mehr haben. Auf der Insel Juist wird sie beispielsweise als
+      Medikamentenversorger verwendet, da am Wochenende keine Lieferungen per Schiff auf die Insel zugestellt werden.
+
+      \item \textbf{Ambulance Drone}
+
+      Die {Ambulance Drohne\cite{ambulancedrone}} ist ein Projekt, welches auf der TU Delft entwickelt wird. Das Besondere an dieser Drohne ist, dass sie einen eingebauten Defibrillator hat, welcher
+      sich per Fernverbindung von einem Rettungshelfer bedienen lässt, obwohl dieser nicht anwesend ist. Die Ambulance Drohne fliegt mit einer Höchstgeschwindigkeit von bis zu
+      100 Stundenkilometer und kann somit, in einem Notfall, schnell die Unfallstelle erreichen.
+
+      \item \textbf{Gimball}
+
+      {Gimball\cite{gimball}} ist der weltweit erste fliegende Roboter, der immun gegen Kollistionen ist. Seine Konstruktion besteht aus einem kugelförmigen Gerüst, in dem die Drohne
+      aufgehängt ist, und sich anhand von Gelenken trotzdem frei darin bewegen kann. Die Kugel fängt Stöße ab, wodurch die Drohne ungehindert an schwer erreichbare
+      Orte gelangt.
 
   \end{itemize}
 
@@ -103,26 +151,26 @@ Betriebs und wandelt Nutzereingaben in Befehle für den Muticopter um.
   Lucas Ullrich war neben seiner Position als Projektleiter Stellvertreter für die Sensorik an unserer Drohne und
   für die Programmierung der Firmware zuständig. Er unterstützte unseren Projektleiter bei terminlichen Angelegenheiten
   und konnte durch seine Kenntnisse mit der Programmiersprache C eine solide Basis für die Firmware des Microcontrollers schaffen.
-  Außerdem verfügte er über das notwendige Wissen und Engagement in der Elektrotechnik, um die Schaltpläne
+  Außerdem entwarf er die Schaltpläne, und erstellte somit ein Konzept für die Sensorik.
 
   \subsection*{Christina Bornberg}
   \textbf{Firmware}
 
   Christina Bornberg fungierte als Firmware Entwicklerin des Teams. Durch ihre Interesse an der Programmierung von Drohnen
-  und bereits gesammelten Erfahrung mit der Programmierung von C konnte sie gemeinsam mit Lucas Ullrich die Logik hinter
-  dem automatisierten Flug der Drohne realisieren.
+  und bereits gesammelten Erfahrung mit der Programmiersprache C konnte sie gemeinsam mit Lucas Ullrich die erarbeiteten Konzepte für
+  den automatisierten Flug der Drohne, in Code realisieren.
 
   \subsection*{Katharina Joksch}
   \textbf{Webentwicklung}
 
   Der Aufgabenbereich von Katharina Joksch war die Webentwicklung, genauer gesagt die Programmierung der digitalen Speisekarte.
   Neben der Planung der Datenbank und der sinnvollen Verwendung hilfreicher Frameworks entwickelte sie außerdem eine Java Applikation,
-  die die Kommunikation zwischen der Speisekarte und der Drohne regelte.
+  die die Kommunikation zwischen der digitalen Speisekarte und der Drohne regelte.
 
   \subsection*{Alexander Punz}
   \textbf{Hardware \& Mechanik}
 
-  Alexander Punz war sowohl für die Hardware als auch für die Mechanik verantwortlich. Seine Aufgaben waren sowohl die Konzeption
+  Alexander Punz war sowohl für die Hardware, als auch für die Mechanik verantwortlich. Seine Aufgaben waren sowohl die Konzeption
   und Produktion des Rotorschutzes, der einen sicheren Flug der Drohne ermöglichte, als auch die Herstellung diverser Halterungen,
   die für Sensorik, Transport und Flugtests verausgesetzt waren.
 
@@ -136,7 +184,7 @@ Betriebs und wandelt Nutzereingaben in Befehle für den Muticopter um.
 
   \subsection*{DI Herbert Fleck}
   DI Herbert Fleck war Hauptbetreuer der Mechatronik Abteilung unseres Teams. Er koordinierte den Prozess der Diplomarbeit
-  gemeinsam mit Mag. Andreas Fink. Das Teeam schätzte außerdem sehr das Konstruktive Feedback bei Präsentationen.
+  gemeinsam mit Mag. Andreas Fink. Das Team schätzte außerdem sehr das Konstruktive Feedback bei Präsentationen.
   Er betreute nebenbei Lucas Ullrich mit Fachwissen aus dem Bereich der Elektronik.
 
   \subsection*{DI August Hörandl}
@@ -151,7 +199,7 @@ Betriebs und wandelt Nutzereingaben in Befehle für den Muticopter um.
   dabei ein Grundgerüst für die Entwicklung aufzubauen.
 
   \subsection*{DI Franz Temper}
-  DI Franz Temper unterstützte Alexander Punz bei der Enticklung der Konstuktionen. Durch Fachwissen mit
+  DI Franz Temper unterstützte Alexander Punz bei der Entwicklung der Konstruktionen. Durch Fachwissen mit
   der Software Creo und Unterstützung bei 3D-Druck war es möglich, dass Alexander alle seiner Ziele erfolgreich
   umsetzen konnte.
 
@@ -173,10 +221,10 @@ ein professionelles, projektbegleitendes Team-Coaching, inklusive Zertifikat.
 
 \subsection*{EVOtech GmbH}
 Dank der Firma {EVOtech\cite{evotech}} war es möglich additive Module für den Hexacopter selbst anzufertigen.
-Das gesamten Material, welches für den 3D-Druck benötigte wurde, wurde gesponsert.
+Das gesamte für den 3D-Druck benötigte Material wurde gesponsert.
 
 \subsection*{LivingPhotos}
-LivingPhotos ermöglichte uns, unsere Internetauftritte durch professionelle Teamfotos und Portraits aufzuwerten.
+{LivingPhotos\cite{livingphotos}} ermöglichte uns, unsere Internetauftritte durch professionelle Teamfotos und Portraits aufzuwerten.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Danksagung}
@@ -215,7 +263,7 @@ Zusammenfassung umformuliert worden.
 
   \textbf{Konzeptstudie: Navigation}
 
-  Es ist ein Konzept entworfen, wie der Multicopter die richtige Flugroute zum gewünschten
+  Es existiert ein Konzept, wie der Multicopter die richtige Flugroute zum gewünschten
   Zielort findet. Dazu zählt sowohl der Teil der Firmware, der für den automatisierten Flug programmiert ist,
   als auch die Positionierung anhand von Sensoren und Wegmarkierungen.
 
@@ -231,16 +279,13 @@ Zusammenfassung umformuliert worden.
 
   \textbf{Testen der Konzeptstudien}
 
-  Um festzustellen ob sich die erarbeiteten Konzepte auch in der Praxis bewähren und somit einen Einsatz zu
-  teuren Kameratrackingsystemen schaffen zu können, sind diese umgesetzt. Als Sensoren sind eine Kamera
-  sowie Ultraschallsensoren verwendet. Um weitere Positionen zu markieren arbeitet der Multicopter mit
-  Farbcodes und/oder Infrarotsendern.
+  Um festzustellen, ob sich die erarbeiteten Konzepte auch in der Praxis bewähren und sich somit der Einsatz teurer Kameratrackingsysteme rentieren könnte,
+  sind diese umgesetzt. Als Sensoren sind eine Kamera, sowie Ultraschallsensoren verwendet.
 
   \textbf{Speisekarte}
 
-  Es ist eine digitale Speisekarte für ein autonomes Kellnersystem entwickelt.
-  Die Anwendung läuft auf einem Tablet und bietet Funktionen wie die Auflistung der Speisen,
-  die Bestellung und die Verarbeitung der Bestellung.
+  Eine digitale, für ein automatisches Kellnersystem entwickelte Speisekarte läuft auf einem Tablet,
+  und bietet Funktionen wie die Auflistung der Speisen, die Bestellung und die Verarbeitung der Bestellung.
   Außerdem gibt es eine Möglichkeit dem Multicopter Informationen zu schicken.
 
   \textbf{Blog}
@@ -274,7 +319,7 @@ Zusammenfassung umformuliert worden.
 
   \textbf{Sicherheitsmaßnahmen}
 
-  Das Projekt enthält keine Sicherheitsmaßnahmen, die Verletzungen von von Menschen
+  Das Projekt enthält keine Sicherheitsmaßnahmen, die Verletzungen von Menschen
   verhindern und das Risiko eines Absturzes senken.
 
   \textbf{Erfolgreiche Konzeptstudie}
@@ -287,16 +332,17 @@ Zusammenfassung umformuliert worden.
 Das nachfolgende Kapitel beschäftigt sich mit den wesentlichen Unterschieden
 zweier Projektmanagement-Methoden und der Wahl der Methode für diese Diplomarbeit.
 
-  \subsection{Agile Methoden}
-  Das Kennzeichen agiler Entwicklungsmethoden wie beispielsweise Scrum oder Kanban, sind
-  ein iterativer Arbeitsprozess, Flexibilität, gute und häufige Kommunikation und vorallem
-  Selbstständigkeit. Es wird kurz geplant und fortlaufend angepasst. Da nur bedingt eine Reihenfolge
-  von zu erledigenden Tasks besteht finden sich diese Methoden oft in der Softwareentwicklung vor.
+  \subsection{Bewährte Methoden}
+    \subsection*{Agile Methoden}
+    Das Kennzeichen agiler Entwicklungsmethoden wie beispielsweise Scrum oder Kanban, sind
+    ein iterativer Arbeitsprozess, Flexibilität, gute und häufige Kommunikation und vorallem
+    Selbstständigkeit. Es wird kurz geplant und fortlaufend angepasst. Da nur bedingt eine Reihenfolge
+    von zu erledigenden Tasks besteht, finden sich diese Methoden oft in der Softwareentwicklung vor.
 
-  \subsection{Klassische Methoden}
-  Klassischen Entwicklungsmethoden zeichnen sich durch eine phasenorientierte Arbeitsweise aus.
-  Ganz besonders die Planungsphasen sind sehr umfangreich, um das Risiko später auftretender Probleme oder
-  Änderungen zu minimieren. Alle Ziele sind klar definiert und Tasks bis in kleinste Details ausformuliert.
+    \subsection*{Klassische Methoden}
+    Klassischen Entwicklungsmethoden zeichnen sich durch eine phasenorientierte Arbeitsweise aus.
+    Ganz besonders die Planungsphasen sind sehr umfangreich, um das Risiko später auftretender Probleme oder
+    Änderungen zu minimieren. Alle Ziele sind klar definiert und Tasks bis in kleinste Details ausformuliert.
 
   \subsection{Die gewählte Methode}
   Für die Entwicklung von Hovering Steward, war eine Kombination beider Methoden notwendig. Da,
@@ -308,14 +354,15 @@ zweier Projektmanagement-Methoden und der Wahl der Methode für diese Diplomarbe
   Für die Entwicklung der Firmware des Multicopters, aber auch die der webtechnologischen Komponenten eignete
   sich die flexible Arbeitsweise von Scrum, da nach Bedarf die einzelnen Module der Software entwickelt, und Schritt
   für Schritt in das System integriert wurden.
-  Die Fertigung der Halterungen am Multicopter bedarfen jedoch einer genauen Planung von Reihenfolge von Arbeitsschritten,
+  Die Fertigung der Halterungen am Multicopter bedarfen jedoch einer genauen Planung der Reihenfolge von Arbeitsschritten,
   welche mithilfe eines Projektstrukturplans visualisiert wurden.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Teammanagement / Teambuilding}
 Da sich das Team aus sowohl aus Schülern verschiedener Klassen, aber auch Fachrichtungen
-zusammensetzte war Teambuilding ein primärer Teil des Managements. Das Projekt bestand außerdem
-aus Komponenten, die sich stark voneinader unterschieden, jedoch gut zusammenarbeiten mussten.
+zusammensetzte war Teambuilding ein wichtiger Teil des Managements. Das Projekt bestand außerdem
+aus Komponenten, die sich technisch gesehen stark voneinader unterschieden, jedoch gut zusammenarbeiten mussten.
+Daher war regelmäßige Kommunikation auch eine Voraussetzung.
 
   \subsection{KaTeCos}
   Eine Form von internen Meetings, die den Grundstein für die Teamdynamik setzten, waren unsere
@@ -328,7 +375,7 @@ aus Komponenten, die sich stark voneinader unterschieden, jedoch gut zusammenarb
   für jedes Teammitglied festlegte.
   \begin{itemize}
     \item Wenn eine Deadline voraussichtlich nicht erfüllt werden kann, wird dem gesamten Team so früh wie möglich Bescheid gegeben.
-    \item Ehrlichkeit und Offenheit gegenüber jedem Teammitglied
+    \item Jedes Teammitglied ist ehrlich und offen gegenüber dem Team
     \item Entscheidungen werden nicht nur vom Projektleiter, sondern vom gesamten Team getroffen
     \item Jedes Team hat immer Zugriff auf projektinterne Dateien und Informationen
     \item Wichtige e-Mails sind zuerst vom gesamten Team abzusegnen, bevor sie verschickt werden.
