--- a/diplom.bib
+++ b/diplom.bib
@@ -235,7 +235,7 @@
 	title = {BSON}
 }
 
-% Markus: Cross Side Scripting
+% Markus: Cross Site Scripting
 @online{xss,
 	lastchecked = {2016-10-03},
 	url = {https://www.owasp.org/index.php/Cross-site_Scripting_%28XSS%29},
@@ -263,7 +263,7 @@
 	title = {Invasion der Drohnen}
 }
 
-% Markus:
+% Markus: Accenture
 @online{accenture,
 	lastchecked = {2016-11-03},
 	url = {https://www.accenture.com/de-de/company},
@@ -291,18 +291,144 @@
 	title = {EVOtech}
 }
 
-% Markus:
-@online{,
-	lastchecked = {2016-13-03},
-	url = {},
-	title = {}
+% Markus: IT's Project Award
+@online{its,
+	lastchecked = {2016-27-03},
+	url = {http://its.fh-salzburg.ac.at/events/its-award/its-project-award/anmeldungtermine/},
+	title = {IT's Project Award}
 }
 
-% Markus:
-@online{,
-	lastchecked = {2016-13-03},
-	url = {},
-	title = {}
+% Markus: FileZilla
+@online{filazilla,
+	lastchecked = {2016-27-03},
+	url = {https://filezilla-project.org/client_features.php},
+	title = {FileZilla}
+}
+
+% Markus: FTP
+@online{ftp,
+	lastchecked = {2016-27-03},
+	url = {http://www.techfacts.de/ratgeber/alternativen-zu-filezilla},
+	title = {FTP}
+}
+
+% Markus: SFTP
+@online{sftp,
+	lastchecked = {2016-27-03},
+	url = {http://www.wise-ftp.com/know-how/ftp_and_sftp.htm},
+	title = {SFTP}
+}
+
+% Markus: AngularJS
+@online{angular,
+	lastchecked = {2016-28-03},
+	url = {https://angularjs.org/},
+	title = {AngularJS}
+}
+
+% Markus: Foundation
+@online{foundation,
+	lastchecked = {2016-28-03},
+	url = {http://foundation.zurb.com/},
+	title = {Foundation}
+}
+
+% Markus: Ruby on Rails
+@online{rubyonrails,
+	lastchecked = {2016-28-03},
+	url = {http://rubyonrails.org/},
+	title = {Ruby on Rails}
+}
+
+% Markus: LivingPhotos
+@online{livingphotos,
+	lastchecked = {2016-29-03},
+	url = {http://www.livingphotos.at/},
+	title = {LivingPhotos}
+}
+
+% Markus: JugendInnovativ
+@online{jugendinnovativ,
+	lastchecked = {2016-29-03},
+	url = {http://www.jugendinnovativ.at/Satellite.aspx?35=37&109=2},
+	title = {Jugend Innovativ}
+}
+
+% Markus: Bosch Technik fürs Leben
+@online{bosch,
+	lastchecked = {2016-29-03},
+	url = {http://www.bosch-career.at/de/at/aktuelles_1/technik_fuers_leben_preis/technik_fuers_leben_preis_1.html},
+	title = {Bosch - Technik fürs Leben}
+}
+
+% Markus: ETH Flying Machine Arena
+@online{eth,
+	lastchecked = {2016-29-03},
+	url = {http://flyingmachinearena.org/},
+	title = {ETH Flying Machine Arena}
+}
+
+% Markus: Lily
+@online{lily,
+	lastchecked = {2016-29-03},
+	url = {https://www.lily.camera/},
+	title = {Lily - Selfie Drone}
+}
+
+% Markus: DHL Paketcopter
+@online{dhl,
+	lastchecked = {2016-29-03},
+	url = {http://www.dhl.de/paketkopter},
+	title = {DHL Paketcopter}
+}
+
+% Markus: Ambulance Drone
+@online{ambulancedrone,
+	lastchecked = {2016-29-03},
+	url = {http://www.tudelft.nl/en/current/latest-news/article/detail/ambulance-drone-tu-delft-vergroot-overlevingskans-bij-hartstilstand-drastisch/},
+	title = {Ambulance Drone}
+}
+
+% Markus: Gimball
+@online{gimball,
+	lastchecked = {2016-29-03},
+	url = {http://www.flyability.com/},
+	title = {Gimball}
+}
+
+% Markus: TYPO3
+@online{typo3,
+	lastchecked = {2016-29-03},
+	url = {https://typo3.org/},
+	title = {TYPO3}
+}
+
+% Markus: Wordpress
+@online{wordpress,
+	lastchecked = {2016-29-03},
+	url = {https://de.wordpress.org/},
+	title = {Wordpress}
+}
+
+% Markus: Drupal
+@online{drupal,
+	lastchecked = {2016-29-03},
+	url = {https://www.drupal.org/},
+	title = {Drupal}
+}
+
+% Markus: Matrix Grafik
+@online{pic_matrix,
+	lastchecked = {2016-29-03},
+	url = {http://www.bcg.de/images/file52307.png},
+	title = {Boston Consulting Matrix Grafik}
+}
+
+% Markus: SWOT-Analyse
+@online{pic_swot,
+	lastchecked = {2016-29-03},
+	url = {http://www.das-unternehmerhandbuch.de/wp-content/uploads/2011/03/SWOT-Analyse.jpg},
+	title = {SWOT-Analyse Matrix}
 }
 
 % Markus: Wie Farben wirken Buch
