--- a/diplomarbeit.tex
+++ b/diplomarbeit.tex
@@ -263,7 +263,7 @@ Wien, \today
 Hinter dem Projekt steht die Idee ein innovatives Logistiksystem, basierend auf einer autonom fliegenden Drohne zu erfinden, und in der Gastronomiebranche einzusetzen.
 
 Das Hauptziel ist die Erarbeitung einer Konzeptstudie, die einen möglichen Weg zur Umsetzung einer automatisch fliegenden Bedienung zeigt. Zusätzlich dazu
-soll eine digitale Speisekarte das automatische System vervollständigen. Optional wird ein Event organisiert um das System in der Praxis zu testen.
+soll eine digitale Speisekarte das automatische System erweitern. Optional wird ein Event organisiert um das System in der Praxis zu testen.
 
 Um die Ziele des Projekts zu ereichen wurde eine umfangreiche Recherche durchgeführt. Zu Begin wurde nach bereits existierenden, ähnlichen Projekten gesucht, um weiters
 diese zu analysieren und eine Übersicht über den Stand der verwendeten Technoliegien zu bekommen. Im folgenden Schritt wurde ein Konzept für jede, für dieses Projekt
@@ -281,7 +281,7 @@ für ein funktionierendes System ist.
 The wider context surrounding our topic is the invention of an innovative logistics system which will be deployed in the gastronomy business by using a multicopter.
 
 The primary aim of the project is the development of a feasibility study which shows a possible way to originate an automatic flying waiter/waitress.
-Additionally a digital menu should complete the automatic system. As an optional goal an event to test and apply the system will be organized.
+Additionally a digital menu should a further stop to an automatic system. As an optional goal an event to test and apply the system will be organized.
 
 To achieve the objectives of the project a comprehensive research phase was carried out. First, similar existing systems had to be found to furthermore analyze
 them to get a better overview what technologies can be used. Second, a concept for each technology which was chosen for the project had to be worked out.
